--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="properties.html">Properties</a></li>
+          <li><a href="properties.html">Projects</a></li>
           <li><a href="services.html" class="active">Services</a></li>
           <li><a href="agents.html">Team</a></li>
           <li><a href="blog.html">Blog</a></li>
