--- a/agents.html
+++ b/agents.html
@@ -157,7 +157,7 @@
               <div class="stats">
                 <div class="stat-item">
                   <span class="number">150+</span>
-                  <span class="label">Properties Sold</span>
+                  <span class="label">Sold</span>
                 </div>
                 <div class="stat-item">
                   <span class="number">$45M</span>
